# l4d2-addon-manager

./: .env  Cargo.toml  README.md  build_linux.sh  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.ts
.github/workflows/: build.yml
src/: App.vue  lib.rs  main.rs  main.ts
src-tauri/: .env  .gitignore  Cargo.toml  tauri.conf.json  template.desktop
src-tauri/.sqlx/: query-2838ffe879bb7b29162e63d8197ab2519b51a87c15020f6d3b8a9aa822517a48.json  query-3fd7104f46cb961b6b389f9484cab3cdd9f4ecda8126a558a4a7b62f5a8058d8.json  query-5ad8688c8cbbec4bc90a7f09f02dcb2ed56c3f8124eca5778e16161d2908865b.json  query-70c23a15e5986c17974575bca33e706da296de89d9f6abe24bf771e38e46f9a2.json  query-8a4082f0ebf497b83e3ea54977706a977f64da23e8401d0421aaeb9c742feb43.json  query-b514a6f548eab3215acba0a5402471bb491ec250bd9e7744a1533916b60bbf82.json  query-d816f9893799478632f8f978c72d1acba2810c75c51b9a9e6610272da09ac3e9.json  query-eed9617dc42294c06dceb0dcbe13ccdcbd9858278801ecee5d215a196262b10b.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20251105025835_init.sql
src-tauri/src/: addons.rs  build.rs  cfg.rs  lib.rs  main.rs  scan.rs  store.rs
src-tauri/src/commands/: addons.rs  config.rs  logs.rs  mod.rs
src-tauri/src/models/: addon.rs  mod.rs
src-tauri/src/modules/: addons.rs  cfg.rs  export.rs  migrate.rs  mod.rs  store.rs
src-tauri/src/scan/: helpers.rs  main.rs  mod.rs  thread.rs  worker.rs
src-tauri/src/util/: defs.rs  mod.rs
src/assets/: main.css
src/commands/: addons.rs  config.rs  mod.rs
src/components/: AddonInfoTable.vue  AddonList.vue  AddonRow.vue  Button.vue  Field.vue  Icon.vue  LogEntryComponent.vue  MainView.vue  ModalCard.vue  Sidebar.vue  SortableColumnHeader.vue
src/components/modals/: AddonInfoModal.vue  ExportModal.vue
src/components/sections/: AddNew.vue  Managed.vue  Settings.vue  Unmanaged.vue  Updateable.vue  Workshop.vue
src/js/: app.ts  tauri.ts  utils.ts
src/pages/: About.vue  Export.vue  Loading.vue  Logs.vue  ManagedAddons.vue  Settings.vue  Setup.vue  WorkshopAddons.vue
src/router/: index.ts
src/types/: Addon.ts  App.ts  Scan.ts
