[package]
name = "l4d2-addon-manager"
version = "2.0.0"
description = "Manage L4D2 Addons with ease"
authors = ["jackzmc"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "l4d2_addon_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
log = "0.4.28"
tauri-plugin-store = "2.4.1"
tauri-plugin-log = "2"
sqlx = { version = "0.9.0-alpha.1", features = ["sqlite", "json", "migrate"] }

