[package]
name = "l4d2-addon-manager"
version = "2.0.0-beta"
description = "Manage L4D2 Addons with ease"
authors = ["jackzmc"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "l4d2_addon_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
log = "0.4.28"
tauri-plugin-store = "2.4.1"
tauri-plugin-log = "2"
sqlx = { version = "0.9.0-alpha.1", features = ["sqlite", "json", "migrate", "runtime-tokio", "chrono"] }
bitflags = { version = "2.10.0", features = ["serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
tokio = { version = "1.48.0", features = [] }
l4d2_addon_parser = { git = "https://git.jackz.me/jackz/l4d2-addon-parser.git", version = "1.1.0"}
steam-workshop-api = "0.7.0"
regex = "1.12.2"
zip = "5.1.1"
rand = "0.8.5"